manifests/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - cd.mgmt.hosterei.ch
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cd.mgmt.hosterei.ch-tls
    - hosts:
        - cd.mgmt.hosterei.ch
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtual-service
  namespace: argocd
spec:
  hosts:
  - cd.mgmt.hosterei.ch
  gateways:
  - argocd-gateway
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
